--- a/game/game/game.vcxproj
+++ b/game/game/game.vcxproj
@@ -11,9 +11,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{9F6BA578-A6E6-4597-8130-683D5F6EADD8}</ProjectGuid>
-    <RootNamespace>rolandsSolution</RootNamespace>
-    <ProjectName>game</ProjectName>
+    <ProjectGuid>{87A14729-0D14-4414-8A9F-C9745AB9EC45}</ProjectGuid>
+    <RootNamespace>game</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -40,12 +39,14 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>C:\Users\user\Source\Repos\zombieGame\rolandsSolution\rolandsSolution\SDL2_mixer-2.0.0\include;C:\Users\user\Source\Repos\zombieGame\rolandsSolution\rolandsSolution\SDL2-2.0.3\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\user\Source\Repos\zombieGame\rolandsSolution\rolandsSolution\SDL2_mixer-2.0.0\lib\x86;C:\Users\user\Source\Repos\zombieGame\rolandsSolution\rolandsSolution\SDL2-2.0.3\lib\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(ProjectDir)\SDL2-2.0.3\include;$(ProjectDir)\SDL2_mixer-2.0.0\include;$(IncludePath)</IncludePath>
+    <ReferencePath>$(ReferencePath)</ReferencePath>
+    <LibraryPath>$(ProjectDir)\SDL2_mixer-2.0.0\lib\x86;$(ProjectDir)\SDL2-2.0.3\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>C:\Users\user\Source\Repos\zombieGame\rolandsSolution\rolandsSolution\SDL2_mixer-2.0.0\include;C:\Users\user\Source\Repos\zombieGame\rolandsSolution\rolandsSolution\SDL2-2.0.3\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\user\Source\Repos\zombieGame\rolandsSolution\rolandsSolution\SDL2_mixer-2.0.0\lib\x86;C:\Users\user\Source\Repos\zombieGame\rolandsSolution\rolandsSolution\SDL2-2.0.3\lib\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(ProjectDir)\SDL2-2.0.3\include;$(ProjectDir)\SDL2_mixer-2.0.0\include;$(IncludePath)</IncludePath>
+    <ReferencePath>$(ReferencePath)</ReferencePath>
+    <LibraryPath>$(ProjectDir)\SDL2_mixer-2.0.0\lib\x86;$(ProjectDir)\SDL2-2.0.3\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -55,9 +56,8 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>SDL2main.lib;SDL2.lib;SDL2_mixer.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_mixer.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Windows</SubSystem>
-      <AdditionalLibraryDirectories>C:\Users\user\Source\Repos\zombieGame\rolandsSolution\rolandsSolution\SDL2_mixer-2.0.0\lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -72,19 +72,18 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>SDL2main.lib;SDL2.lib;SDL2_mixer.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_mixer.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Windows</SubSystem>
-      <AdditionalLibraryDirectories>C:\Users\user\Source\Repos\zombieGame\rolandsSolution\rolandsSolution\SDL2_mixer-2.0.0\lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\main.cpp" />
+    <ClCompile Include="..\main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\audio.hpp" />
-    <ClInclude Include="..\..\renderer.hpp" />
-    <ClInclude Include="..\..\sdl.hpp" />
-    <ClInclude Include="..\..\userInput.hpp" />
+    <ClInclude Include="..\audio.hpp" />
+    <ClInclude Include="..\renderer.hpp" />
+    <ClInclude Include="..\sdl.hpp" />
+    <ClInclude Include="..\userInput.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
