--- a/game/game/game.vcxproj.filters
+++ b/game/game/game.vcxproj.filters
@@ -32,5 +32,14 @@
     <ClInclude Include="..\userInput.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\options.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\mainMenu.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\utility.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
