--- a/game/game/game.vcxproj.filters
+++ b/game/game/game.vcxproj.filters
@@ -32,13 +32,13 @@
     <ClInclude Include="..\userInput.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\options.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="..\mainMenu.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\utility.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\settings.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
