izveidoju engine klasi, pielaboju mouse support un pievienoju dazus komentus

--- a/game/game/game.vcxproj
+++ b/game/game/game.vcxproj
@@ -81,6 +81,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\audio.hpp" />
+    <ClInclude Include="..\engine.hpp" />
     <ClInclude Include="..\mainMenu.hpp" />
     <ClInclude Include="..\settings.hpp" />
     <ClInclude Include="..\renderer.hpp" />
