--- a/game/game/game.vcxproj.filters
+++ b/game/game/game.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="..\settings.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\engine.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
