--- a/game/game/game.vcxproj.filters
+++ b/game/game/game.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="..\engine.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\game.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
