--- a/game/game/game.vcxproj.filters
+++ b/game/game/game.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="..\..\player.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\ttf.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\main.cpp">
