--- a/game/game/game.vcxproj.filters
+++ b/game/game/game.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="..\..\fonts.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\sound.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\main.cpp">
