added a lambda sort for entity y-axis

--- a/game/game/game.vcxproj.filters
+++ b/game/game/game.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="..\..\sound.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\zombie.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\main.cpp">
