--- a/game/game/game.vcxproj.filters
+++ b/game/game/game.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="..\..\spriteHandler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\vector.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\player.h">
@@ -60,6 +63,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\spriteHandler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\vector.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
