--- a/game/game/game.vcxproj
+++ b/game/game/game.vcxproj
@@ -18,6 +18,7 @@
     <ClCompile Include="..\..\sourcery.cpp" />
     <ClCompile Include="..\..\sprite.cpp" />
     <ClCompile Include="..\..\spriteHandler.cpp" />
+    <ClCompile Include="..\..\UI.cpp" />
     <ClCompile Include="..\..\vector.cpp" />
     <ClCompile Include="..\..\zombie.cpp" />
   </ItemGroup>
@@ -28,6 +29,7 @@
     <ClInclude Include="..\..\sourcery.h" />
     <ClInclude Include="..\..\sprite.h" />
     <ClInclude Include="..\..\spriteHandler.h" />
+    <ClInclude Include="..\..\UI.h" />
     <ClInclude Include="..\..\vector.h" />
     <ClInclude Include="..\..\zombie.h" />
   </ItemGroup>
