--- a/game/game/game.vcxproj.filters
+++ b/game/game/game.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="..\..\vector.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\UI.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\player.h">
@@ -66,6 +69,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\vector.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\UI.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
