health bar, changed the way entities face their direction and included secondary fire option

--- a/game/game/game.vcxproj.filters
+++ b/game/game/game.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="..\..\UI.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\tile.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\player.h">
@@ -72,6 +75,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\UI.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\tile.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
