added impassable tiles wip, i will probably revert some change because some stuff here is clunky

--- a/game/game/game.vcxproj
+++ b/game/game/game.vcxproj
@@ -21,6 +21,7 @@
     <ClCompile Include="..\..\tile.cpp" />
     <ClCompile Include="..\..\UI.cpp" />
     <ClCompile Include="..\..\vector.cpp" />
+    <ClCompile Include="..\..\wall.cpp" />
     <ClCompile Include="..\..\zombie.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -33,6 +34,7 @@
     <ClInclude Include="..\..\tile.h" />
     <ClInclude Include="..\..\UI.h" />
     <ClInclude Include="..\..\vector.h" />
+    <ClInclude Include="..\..\wall.h" />
     <ClInclude Include="..\..\zombie.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
