--- a/game/game/game.vcxproj.filters
+++ b/game/game/game.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="..\..\tile.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\zombiespawner.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\player.h">
@@ -78,6 +81,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\tile.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\zombiespawner.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
